--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /Public/Runtime
 /Public/Uploads
-/App/Common/Conf/local.php
+/App/Common/Conf/local*.php
 /App/Common/Conf/taxonomy*.php
 /App/Common/Conf/sitelist.php
 /App/Common/Cache/*.php
